[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archon-core"
version = "0.1.0"
description = "A secure and well-structured task orchestration CLI for Archon testing."
readme = "README.md"
authors = [
  { name = "Archon QA", email = "qa@archon.local" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
archon-core = "archon_app.cli:main"

[tool.setuptools]
package-dir = {"" = "archon_app"}
packages = ["archon_app"]
include-package-data = true

[tool.setuptools.package-data]
"archon_app" = ["py.typed"]
